Redo "Fixed: Alignment of validation errors in labels"
Now with correct line endings.

--- a/src/UI/Content/form.less
+++ b/src/UI/Content/form.less
@@ -41,7 +41,6 @@
 
   .help-inline {
     display      : inline-block;
-    margin-top   : 8px;
     padding-left : 0px;
 
     @media (max-width: @screen-xs-max) {
